# dotfiles

./: .gitignore  README.md  deps  makefile  pkglist.txt
.config/nvim/: init.vim
.vifm/: vifmrc
awesome/: .xprofile  rc.lua
awesome/debian/: menu.lua
bash/: .bashrc  makefile
cmake/intercom/libnetcwmp/: CMakeLists.txt
cmake/intercom/libnetcwmp/libcwmp/: CMakeLists.txt
cmake/intercom/libnetcwmp/libnetcwmp/: CMakeLists.txt
cmake/intercom/libnetcwmp/libpool/: CMakeLists.txt
cmake/intercom/libnetcwmp/netcwmpd/: CMakeLists.txt
cmake/intercom/voipd/: CMakeLists.txt
debootstrap/: postinst.sh
debootstrap/conf/etc/apt/: sources.list
gtk/: .gtkrc-2.0
i3wm/: .i3blocks.conf  .i3status.conf  .xinitrc  .xsessionrc  10-monitor.conf  battery  config  i3lock.service  kbd_toggle  xorg.conf
idea/: .ideavimrc
idea/home/: .ideavimrc
img/: background  foreground
keyboard/etc/default/: keyboard
lightdm/: lightdm-gtk-greeter.conf
make/: makefile
make/home/: makefile
mc/: ini  mc.ext
mpv/.config/mpv/: mpv.conf
nfs/: exports
nvim/: init.vim
nvim/.config/nvim/: init.vim
nvim/.config/nvim/after/ftplugin/: cpp.vim  python.vim  yaml.vim
nvim/.config/nvim/plugin/: toggle-cpp.vim
nvim/home/.config/nvim/: init.vim
old/awesome/: .xsessionrc  tweaks.lua
old/bash/: .bashrc
old/cmake/intercom/: .vimrc  CMakeLists.txt  makefile  toolchain.txt
old/cmake/intercom/libnetcwmp/libxmlet/: CMakeLists.txt
old/ddclient/: ddclient.conf
old/debootstrap/: preinst.sh
old/debootstrap/conf/etc/: fstab
old/debootstrap/conf/etc/apt/apt.conf.d/: 02minimize
old/i3wm/: .i3blocks.conf  config  i3lock.service  kbd  kbd_toggle
old/lightdm/: lightdm-gtk-greeter.conf
old/mc/: panels.ini
old/mc/usr/share/mc/skins/: modarcon16-friendly.ini
old/minidlna/: minidlna.conf
old/qmake/intercom/: build.pri  intercom.pro  toolchain.pri  voipd.pro
old/qmake/stand/: asu.pro
old/quartus/: 51-usbblaster.rules
old/redshift/: redshift.conf
old/root/: iptables.rules  iptables.service  makefile
old/scripts/: .backup.py  br  fixenc.sh
old/ssh/: config  sshd_config
old/transmission-daemon/: settings.json
old/vim/: .vimrc  .ycm_extra_conf.py
qmake/intercom/: snmpd.pro
qmake/stand/: build.pri  istok-stand.pro
quartus/: quartus
root/: iptables.rules  makefile
rsync/: .rsync-ignore.list
samba/: smb.conf
scripts/: .backup.py  br
slim/: slim.conf
terminator/: config
termite/.config/termite/: config
termite/home/.config/termite/: config
tmux/: .tmux.conf  fix_first_window_name.patch  last  tmux_resurrect_2017-06-10T18:56:23.txt
tmux/.tmux/resurrect/scripts/: restore.sh
tmux/home/: .tmux.conf
vifm/: vifmrc
vifm/.vifm/: vifmrc
vifm/home/.vifm/: vifmrc
vim/: .vimrc
